impl projectList, agileList (components/UI/store/models/types)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "jsx": "react-jsx",
     "moduleResolution": "node",
     "sourceMap": true,
+    "removeComments": true,
     "lib": [
       "DOM",
       "DOM.Iterable",
