--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "webpack serve -c webpack/dev.config.js",
     "build": "webpack -c webpack/prod.config.js",
     "analyze": "webpack --analyze -c webpack/analyze.config.js",
+    "start:ts": "webpack serve --env mode=development port=3000",
+    "build:ts": "webpack --env mode=production",
+    "analyze:ts": "webpack --env mode=production analyze=true",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -26,10 +29,13 @@
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-bundle-analyzer": "^4.6.0",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "autoprefixer": "^10.4.13",
@@ -55,6 +61,7 @@
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.2.4",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-bundle-analyzer": "^4.7.0",
