--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "description": "webpack, scrum",
   "scripts": {
     "start": "webpack serve --env mode=development port=3000",
-    "build": "webpack --env mode=production",
-    "analyze": "webpack --env mode=production analyze=true",
+    "build:dev": "webpack --env mode=development",
+    "build:prod": "webpack --env mode=production",
+    "build:analyze": "webpack --env analyze mode=production",
     "start:js": "webpack serve -c webpack/dev.config.js",
     "build:js": "webpack -c webpack/prod.config.js",
     "analyze:js": "webpack --analyze -c webpack/analyze.config.js",
