--- a/.eslintrc
+++ b/.eslintrc
@@ -61,14 +61,15 @@
     "no-multiple-empty-lines": "error",
     "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx", ".tsx"] }],
     "react/jsx-fragments": ["error", "element"],
+    "@typescript-eslint/no-unused-vars": "warn",
     "no-console": "warn",
-    "no-unused-vars": "warn",
     "react/jsx-props-no-spreading": "warn",
-    "no-shadow": "off",
+    "no-shadow": "off",    
+    "no-unused-vars": "off",
     "react/prop-types": "off",
     "react/require-default-props": "off",
-    "import/extensions": "off",
     "react/function-component-definition": "off",
+    "import/extensions": "off",
     "import/prefer-default-export": "off",
     "import/no-extraneous-dependencies": "off",
     "import/order": [
