add jest; rename getWordTask -> getWordByCountTasks (add test)

--- a/.eslintrc
+++ b/.eslintrc
@@ -96,5 +96,15 @@
         "newlines-between": "always"
       }
     ]
-  }
+  },
+  "overrides": [
+    {
+      "files": [
+        "*.test.{ts,tsx}"
+      ],
+      "rules": {
+        "no-undef": "off"
+      }
+    }
+  ]
 }
