--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "removeComments": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,  
+    "allowJs": true,
     "lib": [
       "DOM",
       "DOM.Iterable",
@@ -50,13 +51,13 @@
     }
   },
   "include": [
-    "**/*.ts",
-    "**/*.tsx",    
+    "src/**/*",
+    "config/**/*",
+    "jest.config.ts",
+    "webpack.config.ts"  
   ],
-  "exclude": [
-    "node_modules",    
-    "public",
-    "webpack",
-    ".vscode",
+  "exclude": [    
+    "config/storybook/main.js",
+    "config/storybook/preview.js",
   ],  
 }
