--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "webpack, scrum",
   "scripts": {
     "start": "webpack serve --env mode=development port=3000",
-    "build:dev": "webpack --env mode=development",
+    "start:dev:server": "node ./json-server/index.js",
     "build:prod": "webpack --env mode=production",
     "build:analyze": "webpack --env analyze mode=production",
     "start:js": "webpack serve -c webpack/dev.config.js",
@@ -76,6 +76,7 @@
     "image-webpack-loader": "^8.1.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
+    "json-server": "^0.17.2",
     "mini-css-extract-plugin": "^2.7.2",
     "postcss": "^8.4.20",
     "postcss-loader": "^7.0.2",
