--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "eslint-webpack-plugin": "^3.2.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.3",
     "image-webpack-loader": "^8.1.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
