--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "webpack, scrum",
   "scripts": {
     "start": "webpack serve --env mode=development port=3000",
+    "start:dev": "concurrently \"npm run start\" \"npm run start:dev:server\"",
     "start:dev:server": "node ./json-server/index.js",
     "build:prod": "webpack --env mode=production",
     "build:analyze": "webpack --env analyze mode=production",
@@ -58,6 +59,7 @@
     "@typescript-eslint/parser": "^5.46.1",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^9.1.0",
+    "concurrently": "^8.2.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.2.2",
