--- a/.eslintrc
+++ b/.eslintrc
@@ -72,6 +72,7 @@
     "import/extensions": "off",
     "import/prefer-default-export": "off",
     "import/no-extraneous-dependencies": "off",
+    "import/no-unresolved": "off",
     "import/order": [
       "error", 
       {
