--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "postcss": "^8.4.20",
     "postcss-loader": "^7.0.2",
     "prettier": "^2.8.1",
+    "storybook-addon-mock": "^3.2.0",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.2.4",
     "ts-loader": "^9.4.2",
